Fix alignment for sponsors and attribution

--- a/src/_attribution.scss
+++ b/src/_attribution.scss
@@ -1,4 +1,5 @@
 .attribution {
     margin-top: 28px;
     opacity: 0.6;
+    text-align: center;
 }
