--- a/src/_sponsors.scss
+++ b/src/_sponsors.scss
@@ -1,3 +1,11 @@
+.phx-hero ~ h3 {
+    margin-top: 28px;
+    text-align: center;
+}
+
+.sponsor-logos {
+    text-align: center;
+}
 
 .sponsor-logos a {
     padding: 4px 8px;
